# $Id: Changes,v 1.71 2003/10/13 16:28:12 petdance Exp $
Revision history for Perl extension WWW::Mechanize

0.63
	[ENHANCEMENTS]
	* mech-dump defaults to dumping forms.
	* Added name, name_regex, tag and tag_regex options to find_link()
	  and follow_link().

0.62	October 7, 2003  8:46pm
	[THINGS THAT MIGHT BREAK YOUR CODE]
	* The parms for find_link()'s url_regex and text_regex must now
	  be actual regex objects, as in qr// objects.	They can't just
	  be little text strings.  If this is a big bummer, let me know.

	[ENHANCEMENTS]
	* Added autocheck parm, to tell your Mech object to die on
	  any error.  This saves you from having to check yourself.
	  This closes RT #3056.
	* Renamed the internal _carp() method as warn().
	* Added a die() method.
	* Can now override the warn() and die() handlers in the
	  constructor.
	* find_link() now complains if it gets a *_regex parm that isn't
	  actually a regex.  See RT #3032.

	[FIXES]
	* mech-dump.t no longer runs if you're not installing mech-dump.
	  See RT #3724.

	[DOCUMENTATION]
	* More FAQs.  Thanks to Gavin Estey.


0.61	October 6, 2003  6:30pm
	No new functionality here.  It's mostly to get the new tests
	into the pipeline so the CPAN testers can run 'em.
	
	[FIXES]
	* Missing dependency on File::Temp.  Thanks, Ask.

	[ENHANCEMENTS]
	* Added the test case for the form processing problem as a .t
	  file, since I spent so long getting it down to a simple case.
	* Internal code uses accessors instead of direct hash entries.
	  Prepare for deprecation of existing hash entries!

	[DOCUMENTATION]
	* The FAQ is now its own document at WWW::Mechanize::FAQ.


0.60	September 22, 2003  10:00pm
	[FIXES]
	* Changed how t/failure.t tries to fail.  It used to hit
	  a bogus hostname in .com, but with Verisign doing its
	  SiteFinder crap, even bogus addresses in .com succeed.

	[ENHANCEMENTS]
	* Added _make_request() to let WWW::Mechanize::Cached easily
	  hook into the request chain.

0.59	September 3, 2003  11:56pm
	[FIXES]