@@ -1,0 +1,13 @@
+<html>
+   <head>
+     <title></title>
+   </head>
+
+   <frameset rows="*,*" frameborder="1" framespacing="0" border="1">
+     <frame name="top" src="find_link.html" marginwidth="8" 
+marginheight="8" scrolling="auto" frameborder="no">
+       <frame name="bottom" src="google.html" marginwidth="0" 
+marginheight="0" scrolling="no" frameborder="no" noresize>
+   </frameset>
+
+</html>
