@@ -1,4 +1,4 @@
-# $Id: Changes,v 1.71 2003/10/13 16:28:12 petdance Exp $
+# $Id: Changes,v 1.72 2003/10/13 16:37:44 petdance Exp $
 Revision history for Perl extension WWW::Mechanize
 
 0.63
@@ -6,6 +6,7 @@ Revision history for Perl extension WWW::Mechanize
 	* mech-dump defaults to dumping forms.
 	* Added name, name_regex, tag and tag_regex options to find_link()
 	  and follow_link().
+	* Added tests from Jim Brandt.
 
 0.62	October 7, 2003  8:46pm
 	[THINGS THAT MIGHT BREAK YOUR CODE]
